Fix small layout issues on specific browsers

--- a/css/main.less
+++ b/css/main.less
@@ -17,7 +17,7 @@ sup {
 
 ul,ol {list-style:none}
 em,address {font-style:normal}
-a {color:inherit; text-decoration-line: none}
+a {color:inherit; text-decoration-line: none; -webkit-text-decoration-line: none}
 
 
 /*=============
@@ -205,7 +205,7 @@ a {color:inherit; text-decoration-line: none}
   Benefits Carousel  
 ===============*/
 @prime-benefits-carousel__category-button--width: 13%;
-@prime-benefits-carousel__category-button--height: 15em;
+@prime-benefits-carousel__category-button--height: 20em;
 
 .prime-benefits-carousel{
     .global-section-formatting;
